# CapstoneGroupA

./: .gitignore  .gitmodules  LICENSE  README.md  robot_description.urdf  setup.sh
archive/robot_description/: package.xml
arduino_src/prototype/: prototype.ino
matlab_sim_src/: clq_mpc_testing.m  get_coriolis_matrix.m  planar_sim.m  sim_state_update.m  visualize.m
matlab_sim_src/Cart Pole Dynamics/: dynamics.m  update_fn.m
matlab_sim_src/Dynamics/: animate.m  compute_C_bar.m  compute_M_bar.m  compute_N.m  compute_ddq.m  compute_linearized_ddq.m  derivation_scratch.m  dynamics.mat  get_linearized_fn.m  motor_modeling.m  nonlinear_constraint.m  state_update_fn.m  traj_opt.m
matlab_sim_src/Full Dynamics/: achievable_5nm.fig  check_feasible_torque.m  compute_C_bar.m  compute_N.m  compute_ddq.m  derivation_scratch.m  feasible.fig  lqr_state_update_fn.m  mpc_state_update_fn.m  objective.m  unacievable_2nm.fig
matlab_sim_src/Kunio Dynamics/: dynamics.m
matlab_sim_src/My Dynamics/: compute_A.m  compute_B.m  (+3 more)
misc/: network_setup.bash
odrive_setup/: odrive_setup.py  setup_odrive.txt  sine_wave.py
ros_ws/src/Simulation/sim_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/Simulation/sim_gazebo/config/: control.yaml
ros_ws/src/Simulation/sim_gazebo/include/sim_gazebo/: simulator.h
ros_ws/src/Simulation/sim_gazebo/launch/: sim_empty.launch  sim_flat_plane.launch
ros_ws/src/Simulation/sim_gazebo/models/custom_ground_plane/: model.config  model.sdf
ros_ws/src/Simulation/sim_gazebo/src/: simulator.cpp
ros_ws/src/Simulation/sim_gazebo/worlds/: empty.world
(+97 files in other folders)
